--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.8",
     "@mui/styles": "^5.10.8",
-    "@emotion/react": "^11.8.2",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^18.0.6",
     "history": "^5.3.0",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hooks-global-state": "^2.0.0",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
     "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^4.0.1",
+    "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
+    "react-hooks-global-state": "^2.0.0",
     "react-input-mask": "^2.0.4",
     "react-router": "^6.2.2",
-    "typescript": "^4.4.2",
-    "scss": "^0.2.4"
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "5.0.1",
+    "scss": "^0.2.4",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
