--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^17.0.20",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
+    "framer-motion": "^7.5.2",
     "history": "^5.3.0",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
@@ -25,6 +27,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "scss": "^0.2.4",
+    "styled-components": "^5.3.6",
     "typescript": "^4.4.2"
   },
   "scripts": {
@@ -54,6 +57,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/react": "^17.0.50",
     "@types/react-dom": "^17.0.17",
+    "prettier": "2.7.1",
     "typescript": "^4.8.4",
     "typescript-plugin-css-modules": "^3.4.0",
     "web-vitals": "^1.1.2"
