--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "baseUrl": "./",
+    "outDir": "./dist/",
+    "target": "ES6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -19,7 +21,8 @@
       {
         "name": "typescript-plugin-css-modules"
       }
-    ]
+    ],
   },
-  "include": ["src"]
+  "include": ["src", "global.d.ts" ],
+  "exclude": ["dist", "build", "node_modules"]
 }
