--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.8",
     "@mui/styles": "^5.10.8",
+    "@types/debounce": "^1.2.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "debounce": "^1.2.1",
     "framer-motion": "^7.5.2",
     "history": "^5.3.0",
     "notistack": "^2.0.5",
